--- a/README.CD
+++ b/README.CD
@@ -7,9 +7,9 @@
                                                    
 #############################
 
- XenDemoCD 1.0 rc1 
+ XenDemoCD 1.0 
  University of Cambridge Computer Laboratory
- 18 Sep 2003
+ 29 Sep 2003
 
  http://www.cl.cam.ac.uk/netos/xen
 
@@ -429,7 +429,7 @@ figuring out what's happened.  Debug a XenoLinux image just as you
 would any other Linux kernel.
 
 We supply a handy debug terminal program which you can find in
-/usr/local/src/xen-1.0rc1/xeno.bk/tools/misc/miniterm/
+/usr/local/src/xen-1.0/xeno.bk/tools/misc/miniterm/
 This should be built and executed on another machine that is connected
 via a null modem cable. Documentation is included.
 Alternatively, telnet can be used in 'char mode' if the Xen machine is
